--- a/style/style.css
+++ b/style/style.css
@@ -35,11 +35,24 @@ p{
     font-size: 30%;
 }
 .envoyer{
+    font-size: 16px;
+    height: 30px;
+    border-radius: 8px;
+    border: none;
+    color: aliceblue;
+    font-family: "button";
+    transition-duration: 0.3s;
+    box-shadow: 0 9px #999;
+    cursor: pointer;
     background-color: #7650ff;
     width: 150px;
 }
 .envoyer:hover{
     background-color: #3700ff;
+}
+.envoyer:active{
+        box-shadow: 0 5px #666;
+        transform: translateY(6px);
 }
 
 .accueil{
